[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-langgraph"
version = "0.1.0"
description = "A lightweight GraphRAG implementation built with LangGraph"
authors = [{ name = "GraphRAG LangGraph" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["rag", "langgraph", "langchain", "graphrag"]
dependencies = [
  "langgraph>=0.2.26",
  "langchain>=0.2.3",
  "langchain-community>=0.2.3",
  "langchain-core>=0.2.3",
  "pydantic>=2.6",
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
