[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-langgraph"
version = "0.1.0"
description = "A lightweight GraphRAG implementation built with LangGraph"
authors = [{ name = "GraphRAG LangGraph" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["rag", "langgraph", "langchain", "graphrag"]
dependencies = [
  "langgraph>=0.2.26",
  "langchain>=0.2.3",
  "langchain-community>=0.2.3",
  "langchain-core>=0.2.3",
  "langchain-text-splitters>=0.2.0",
  # "graphrag @ file:///Users/simon/learn/graphrag",
  "pydantic>=2.6",
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "langsmith>=0.3.45",
  "boto3>=1.42.4",
]

[project.scripts]
graphrag-langgraph = "graphrag_langgraph.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4", "isort>=5.13.2", "pylint>=3.2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
src_paths = ["src"]

[tool.pylint]
py-version = "3.11"
max-line-length = 88
ignore = [".venv", "build", "dist"]
# Ensure Pylint can resolve imports in the src/ layout
init-hook = "import sys; sys.path.append('src')"


# 安装（使用 uv）：
#   uv sync --extra dev
# 一键排序项目所有 *.py 的 imports：
#   uv run isort .
# 仅检查是否需要排序（CI 常用，返回非零退出码表示需要修复）：
#   uv run isort --check-only .
